2008-03-22  Eric Seidel  <eric@webkit.org>

        Reviewed by mjs.

        Unify handling of NAMESPACE_ERR and fix Acid3 test 25
        http://bugs.webkit.org/show_bug.cgi?id=16693

        Test: fast/dom/DOMImplementation/createDocumentType-err.html

        * dom/DOMImplementation.cpp:
        (WebCore::DOMImplementation::createDocumentType):
        (WebCore::DOMImplementation::createDocument):
        * dom/DOMImplementation.idl:
        * dom/Document.cpp:
        (WebCore::Document::hasPrefixNamespaceMismatch):
        (WebCore::Document::createElementNS):
        (WebCore::Document::parseQualifiedName):
        (WebCore::Document::createAttributeNS):
        * dom/Document.h:
        * dom/Element.cpp:
        (WebCore::Element::setAttributeNS):
        * editing/FormatBlockCommand.cpp:
        (WebCore::FormatBlockCommand::doApply):

2008-03-22  Eric Seidel  <eric@webkit.org>

        Reviewed by mjs.

        Fix createElementNS to throw exceptions for invalid qualified names
        Fixes Acid3 sub-test 23
        http://bugs.webkit.org/show_bug.cgi?id=16833

        Tests: fast/dom/Document/createAttributeNS-namespace-err.html
               fast/dom/Document/createElementNS-namespace-err.html

        * dom/Document.cpp:
        (WebCore::Document::createElement):
        (WebCore::hasNamespaceError):
        (WebCore::Document::createElementNS):
        (WebCore::Document::createAttributeNS):
        * dom/Document.idl:

2008-03-21  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver Hunt.

        Bug 13693: REGRESSION (r13615): Acid2 Test Eyes render improperly after a page refresh
        <http://bugs.webkit.org/show_bug.cgi?id=13693>

        Do not create bogus history items for unloaded <object> elements, because they
        cause fallback content to be ignored on reload.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::createHistoryItemTree):

2008-03-21  Dan Bernstein  <mitz@apple.com>
