@@ -1,3 +1,10 @@
+2008-03-22  Mark Rowe  <mrowe@apple.com>
+
+        Qt build fix.
+
+        * WebCoreSupport/FrameLoaderClientQt.cpp:
+        (WebCore::):
+
 2008-03-18  Simon Hausmann  <hausmann@webkit.org>
 
         Reviewed by Holger.
