@@ -1,3 +1,10 @@
+2008-03-22  Mark Rowe  <mrowe@apple.com>
+
+        Qt build fix.
+
+        * bridge/qt/qt_runtime.cpp:
+        (KJS::Bindings::valueRealType):
+
 2008-03-22  Eric Seidel  <eric@webkit.org>
 
         Reviewed by mjs.
